--- a/client/.gitignore
+++ b/client/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
-.env
+/.env
 
 # testing
 /coverage
@@ -18,7 +18,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.env
+/.env
 
 npm-debug.log*
 yarn-debug.log*
